Fix project according to Software Engineering rules.

--- a/dp_labo3_E3/Composite/Composite.cbp
+++ b/dp_labo3_E3/Composite/Composite.cbp
@@ -32,12 +32,15 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Apple.cpp" />
 		<Unit filename="Apple.h" />
+		<Unit filename="Banana.cpp" />
 		<Unit filename="Banana.h" />
 		<Unit filename="Component.h" />
 		<Unit filename="Composite.cpp" />
 		<Unit filename="Composite.h" />
 		<Unit filename="Leaf.h" />
+		<Unit filename="Strawberry.cpp" />
 		<Unit filename="Strawberry.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
